# aspect_build_rules_js_issue_1448

./: .bazelignore  .gitignore  .npmrc  BUILD.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock-update.sh  pnpm-lock.yaml  pnpm-workspace.yaml
a/: BUILD.bazel  index.html  package.json  tsconfig.json  vite.config.ts
b/proto/: BUILD.bazel  example.proto  package.json
